Update AI.java